[gd_scene load_steps=8 format=3 uid="uid://hii4bk8uptpf"]

[ext_resource type="Script" path="res://Player_Controler/player.gd" id="1_kx1hg"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="2_peej4"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="3_uw0u8"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="4_42404"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="5_e54dm"]
[ext_resource type="PackedScene" uid="uid://bcwkugn6v3oy7" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="5_icepn"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_wesoq"]

[node name="Player" type="CharacterBody3D"]
axis_lock_linear_z = true
script = ExtResource("1_kx1hg")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_wesoq")

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="."]

[node name="StateChart" type="Node" parent="."]
script = ExtResource("2_peej4")

[node name="root" type="Node" parent="StateChart"]
script = ExtResource("3_uw0u8")
initial_state = NodePath("ground")

[node name="ground" type="Node" parent="StateChart/root"]
script = ExtResource("4_42404")

[node name="air" type="Node" parent="StateChart/root"]
script = ExtResource("4_42404")

[node name="dodge" type="Node" parent="StateChart/root"]
script = ExtResource("4_42404")

[node name="to_ground" type="Node" parent="StateChart/root"]
script = ExtResource("5_e54dm")
to = NodePath("../ground")
event = &"to_ground"

[node name="to_air" type="Node" parent="StateChart/root"]
script = ExtResource("5_e54dm")
to = NodePath("../air")
event = &"to_air"

[node name="to_dodge" type="Node" parent="StateChart/root"]
script = ExtResource("5_e54dm")
to = NodePath("../dodge")
event = &"to_dodge"

[node name="StateChartDebugger" parent="." instance=ExtResource("5_icepn")]
offset_right = -1549.0
offset_bottom = -583.0
initial_node_to_watch = NodePath("../StateChart")

[node name="Node2D" type="Node2D" parent="."]

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.05637, 0)
pixel_size = 0.01
text = "asdasdasdasd"

[connection signal="state_physics_processing" from="StateChart/root" to="." method="_on_root_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/root/ground" to="." method="_on_ground_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/root/air" to="." method="_on_air_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/root/dodge" to="." method="_on_dodge_state_physics_processing"]
